--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -18,7 +18,7 @@ html, body{
 }
 
 header{
-    background-image: linear-gradient(rgba(0,0,0,.5), rgba(0,0,0,.7)), url(img/header-img.jpg);
+    background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,.7)), url(img/header-img.jpg);
     height: 100vh;
     background-size: cover;
     background-position: center;
@@ -80,11 +80,10 @@ h2{
 .main-nav li a:link, .main-nav li a:visited{
     text-decoration: none;
     color: white;
-    padding-bottom: 5px; /* Cambio mio */
 }
 
 .main-nav li a:hover, .main-nav li a:active{
-    border-bottom:2px solid #be0692;
+    border-bottom:2px solid #ed07b7;
 }
 
 .logo{
