--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -13,7 +13,7 @@ html, body{
 }
 
 .row{
-    max-width: 1140px;
+    max-width: 1440px;
     margin:0 auto;
 }
 
@@ -50,6 +50,8 @@ h2{
     margin-bottom: 100px;
 }
 
+/**** BUTTONS ****/
+
 .btn:link, .btn:visited{
     text-decoration: none;
     padding: 10px 30px;
@@ -63,6 +65,16 @@ h2{
 
 .btn-full:hover, .btn-full:active{
     background-color: #be0692;
+}
+
+.btn-ghost:link, .btn-ghost:visited{
+    border: 2px solid #ed07b7;
+    color: #ed07b7;
+}
+
+.btn-ghost:hover, .btn-ghost:active{
+    background-color: #ed07b7;
+    color: white;
 }
 
 .main-nav{
@@ -80,7 +92,7 @@ h2{
 .main-nav li a:link, .main-nav li a:visited{
     text-decoration: none;
     color: white;
-    transition: border-bottom 0.2s;
+    /*transition: border-bottom 0.2s;*/
 }
 
 .main-nav li a:hover, .main-nav li a:active{
@@ -102,4 +114,22 @@ h2{
     font-size: 250%;
     font-weight: 500;
     margin-bottom: 50px;
+}
+
+.about-para{
+    color: #555;
+    margin-bottom: 50px;
+}
+
+.about-box{
+    margin-top: 150px;
+}
+
+.about-box:first-child{
+    text-align: left;
+    padding: 0 5%;
+}
+
+.about-box:last-child{
+    text-align: right;
 }
