--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -17,6 +17,19 @@ html, body{
     margin:0 auto;
 }
 
+/**** CLEARFIXS ****/
+
+.clearfix{
+    zoom: 1;
+}
+
+.clearfix:after{
+    content: " ";
+    display: table;
+    clear: both;
+    visibility: hidden;
+}
+
 /**** BUTTONS ****/
 
 .btn:link, .btn:visited{
@@ -37,6 +50,7 @@ html, body{
 .btn-ghost:link, .btn-ghost:visited{
     border: 2px solid #ed07b7;
     color: #ed07b7;
+    transition: background-color 0.3s, color 0.3s;
 }
 
 .btn-ghost:hover, .btn-ghost:active{
@@ -154,12 +168,14 @@ header{
 
 .work-section{
     text-align: center;
+    background-color: #f4f4f4;
 }
 
 .section-heading{
     font-size: 250%;
     color: black;
     margin-bottom: 20px;
+    margin-top: 150px;
 }
 
 .section-sub-heading{
@@ -178,10 +194,44 @@ header{
     margin: 30px auto 0 auto;
 }
 
-/*
+.work-portfolio {
+    margin-top: 10px;
+    list-style: none;
+    width: 100%;
+}
+
+.work-portfolio li{
+    display: block;
+    width: 25%;
+    float: left;
+}
+
 .portfolio-image{
-    width: 10%;
+    background-color: black;
+    overflow: hidden;
+}
+
+.portfolio-image img{
+    width: 100%;
     height: auto;
-    display: inline-block;
-    padding: 2.5%;
-}*/
+    opacity: 0.7;
+    transform: scale(1.15);
+    transition: transform 0.5s, opacity 0.5s;
+}
+
+.portfolio-image img:hover{
+    opacity: 1;
+    transform: scale(1);
+}
+
+.work-para{
+    color: white;
+}
+
+
+/**** SERVICES SECTION ****/
+
+.services-section{
+    text-align: center;
+    background-color: #f4f4f4;
+}
