--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -235,3 +235,34 @@ header{
     text-align: center;
     background-color: #f4f4f4;
 }
+
+.service-box{
+    padding: 1% 3%;
+    display: inline-block;
+}
+
+.big-icon{
+   font-size: 250%;
+   color: #6920B0;
+   display: block;
+   margin-bottom: 30px;
+}
+
+.service-heading{
+    font-size: 150%;
+    margin-bottom: 30px;
+    font-weight: 400;
+}
+
+.service-para{
+    color: #555;
+    font-size: 90%;
+    margin-bottom: 20px;
+}
+
+.service-link{
+    color: #ed07b7;
+    text-transform: uppercase;
+    text-decoration: none;
+}
+
