--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -113,13 +113,16 @@ header{
     text-transform: uppercase;    
 }
 
-.main-nav li a:link, .main-nav li a:visited{
+.main-nav li a:link, 
+.main-nav li a:visited{
     text-decoration: none;
     color: white;
+    /*-webkit-transition: border-bottom 0.2s;*/
     /*transition: border-bottom 0.2s;*/
 }
 
-.main-nav li a:hover, .main-nav li a:active{
+.main-nav li a:hover, 
+.main-nav li a:active{
     border-bottom:2px solid #ed07b7;
 }
 
@@ -129,6 +132,29 @@ header{
     float: left;
 }
 
+.sticky-nav{
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: rgba(255,255,255,.8);
+    width: 100%;
+    box-shadow: 0 2px 2px #efefef;
+}
+
+.sticky-nav .logo{
+    height: 60px;
+    margin-top: 3px;
+}
+
+.sticky-nav .main-nav{
+    margin-top: 18px;
+}
+
+.sticky-nav .main-nav li a:link, 
+.sticky-nav .main-nav li a:visited{
+    color: #555;
+    padding: 5px 0;
+}
 
 /**** ABOUT SECTION ****/
 
