--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -560,3 +560,18 @@ footer p{
     margin-top: 50px;
     line-height: 1.5;
 }
+
+/****  JQUERY ANIMATE ON SCROLL ****/
+
+.js--about-box{
+    opacity: 0;
+    animation-duration: 1s;
+}
+
+.js--about-box.animate__animated{
+    opacity: 1;
+}
+
+.js--service-box{
+    animation-duration: 1.5s;
+}
